[package]
name = "bulk_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.14.10"
drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "v2.95.0", features = ["cpi", "mainnet-beta"]}
borsh = "0.10.3"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"


[lib]
name = "bulk_engine"
crate-type = ["cdylib", "lib"]